# health-export-cli

./: AGENTS.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: requirements.md  test-cases.md
scripts/: benchmark-release.sh  regenerate-test-export.sh
src/: lib.rs  main.rs
tests/: running_cli.rs
tests/fixtures/: export.xml
tests/fixtures/workout-routes/: route_2023-12-28.gpx  route_2024-06-10.gpx  route_2025-02-01.gpx  route_2025-03-01.gpx
