[package]
name = "health-export-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = "8.5"
quick-xml = "0.39"
polars = { version = "0.53", features = [
    "lazy",
    "fmt",
    "dtype-date",
    "dtype-datetime",
] }
chrono = "0.4"
anyhow = "1"
